--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -11,11 +11,17 @@
                         <td>
                         <p><%= poke.name %></p>
                         <p><%= image_tag("pokemon/#{poke.ndex}.png", alt: "pokemon") %></p>
-                        <p>Level <%= poke.level %></p></td>
+                        <p>Level <%= poke.level %></p>
+                        <p>Health <%= poke.health %></p>
+                        <div><%= button_to "Damage!", damage_path(id: poke), :class => "button medium", :method => :patch %></div></td>
                     <%end%>
                 <% else %>
                     <tr><td>None</td></tr>
                 <%end%>
+                <%if @trainer == current_trainer %>
+                    <tr><td><div><%= button_to "Create!", new_path(id: @pokemon), :class => "button medium", :method => :get %></div></td></tr>
+                <%end%>
+                <td></td>
         </tbody>
       </table>
 <% end %>
